--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "type": "module",
   "scripts": {
     "start": "minista",
-    "build": "minista build",
-    "preview": "minista preview"
+    "build": "minista build --base /lumen/",
+    "preview": "minista preview",
+      "deploy": "npm run build && gh-pages -d dist"
   },
   "prettier": {
     "semi": false
   },
   "devDependencies": {
+    "gh-pages": "^6.3.0",
     "minista": "^3.1.7",
     "postcss-pxtorem": "^6.1.0",
     "react": "^18.2.0",
