--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "scripts": {
     "start": "minista",
     "build": "minista build",
-    "preview": "minista preview"
+    "preview": "minista preview",
+    "deploy": "gh-pages -d dist"
   },
   "prettier": {
     "semi": false
   },
   "devDependencies": {
     "cross-env": "^10.1.0",
+    "gh-pages": "^6.3.0",
     "minista": "^3.1.7",
     "postcss-pxtorem": "^6.1.0",
     "react": "^18.2.0",
